2011-05-31  Paul Brook  <paul@codesourcery.com>
	Nathan Sidwell  <nathan@codesourcery.com>

	* config/tc-arm.c (fix_new_arm): Create an absolute symbol for
	pc-relative fixes to constants.
	* config/tc-arm.h (TC_FORCE_RELOCATATION_ABS): Define.
	
2011-05-27  Nick Clifton  <nickc@redhat.com>

	* config/tc-s390.c (md_begin): Remove unused variable dup_insn.

2011-05-24  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/tc-s390.c (md_gather_operands): Fix check for floating
	register pair operands.

2011-05-24  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/tc-s390.c (md_gather_operands): Emit an error for odd
	numbered registers used as register pair operand.

2011-05-23  Nick Clifton  <nickc@redhat.com>

	* config/tc-v850.h (TC_FX_SIZE_SLACK): Define.

2011-05-20  Bernd Schmidt  <bernds@codesourcery.com>

	* config/tc-tic6x.c (tic6x_operators): Add "pcr_offset".
	(tic6x_parse_name): Handle it.
	(tic6x_fix_new_exp): Handle O_pcr_offset.
	(tic6x_fix_adjustable): Return 0 for the new relocs.
	(md_apply_fix): Handle them.
	(tc_gen_reloc): Likewise.
	* config/tc-tic6x.h (tic6x_fix_info): Add a fix_subsy member.

2011-05-18  Nick Clifton  <nickc@redhat.com>

	PR gas/12754
	* config/tc-tic30.c (ordinal_names): Allow translation of the
	ordinal names.

2011-05-18  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (s_unreq): Reword warning message to make it
	easier to translate.
	* config/tc-ia64.c (md_show_usage): Add note for translators.
	* configure.in (ALL_LINGUAS): Add "fi".
	* configure: Regenerate.

2011-05-18  Tristan Gingold  <gingold@adacore.com>

	* config/tc-ppc.h (ppc_tc_sy): Reorder fields.
	Put size into an union with dw.
	(OBJ_COPY_SYMBOL_ATTRIBUTES): Adjust.
	(ppc_xcoff_end): Declare.
	(md_end): Define.
	* config/tc-ppc.c: Add includes for xcoff.
	(ppc_dwsect): New function.
	(md_pseudo_table): Add dwsect.
	(struct dw_subsection): New.
	(dw_sections): New.
	(ppc_change_debug_section): New function.
	(ppc_xcoff_end): Ditto.