@@ -1,0 +1,5 @@
+.thumb
+.arch armv7
+.syntax unified
+foo:
+	b   0x10 @ Assembler must not relax this
